--- a/charts/shenyu/templates/shenyu-admin-deployment.yaml
+++ b/charts/shenyu/templates/shenyu-admin-deployment.yaml
@@ -67,6 +67,7 @@ spec:
         - name: download-oracle-jar
           image: busybox:1.35.0
           command:
+            # fixme: oracle jdbc driver is not free, so we can't download it from maven central, we need to download it from oracle official website
             - "sh"
             - "-c"
             - "wget https://repo1.maven.org/maven2/com/oracle/ojdbc/ojdbc8/{{$oracleConnectorVersion}}/ojdbc8-{{$oracleConnectorVersion}}.jar;
