feat: support jvm options and K8s resources quota
Signed-off-by: Bird <aflybird0@gmail.com>

--- a/charts/shenyu/templates/shenyu-admin-deployment.yaml
+++ b/charts/shenyu/templates/shenyu-admin-deployment.yaml
@@ -88,6 +88,10 @@ spec:
           env:
             - name: 'TZ'
               value: 'Asia/Beijing'
+            - name: ADMIN_JVM
+              value: {{ .Values.admin.javaOpts | quote }}
+          resources:
+            {{- toYaml .Values.admin.resources | nindent 12 }}
           volumeMounts:
           - name: shenyu-admin-config
             mountPath: /opt/shenyu-admin/conf/application.yml
